// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisuallyHiddenHeadline with headline data should render correctly 1`] = `
.c0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<h1
  class="c0"
  id="content"
  tabindex="-1"
>
  This is a headline!
</h1>
`;

exports[`VisuallyHiddenHeadline with plain text headline should render h1 containing correct text 1`] = `
.c0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<h1
  class="c0"
  id="content"
  tabindex="-1"
>
  Plain headline
</h1>
`;
